--- a/style.css
+++ b/style.css
@@ -61,3 +61,18 @@ section {
 .card-body h5 {
   font-weight: bold;
 }
+
+.card {
+  width: 100%;
+  height: 100%;
+  border-style: solid;
+  border-width: 6px 6px 6px 6px;
+}
+.card img {
+  width: 100%;
+  height: 100%;
+}
+.card-body .card-title a {
+  text-decoration: none;
+  color: black;
+}
